--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,5 @@
-.App {
-  text-align: center;
-}
-
-.App-header {
-  background-color: #282c34;
+.content {
+  background-image: url("./images/bg.png");
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -11,6 +7,14 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.content img.logo {
+  position: absolute;
+  bottom: 1em;
+  right: 1em;
+  width: 18%;
+  z-index: 1301;
 }
 
 .button {
@@ -39,9 +43,23 @@
   height: 10rem;
   transform: translate(-50%, -50%);
   background: white;
+  border: 3px solid rgba(0,0,0,0.3);
   color: #000;
   font-size: 1.5rem;
   font-weight: bold;
+  font-family: "VodafoneRg";
+}
+
+button:disabled.roulette-button {
+  cursor: default;
+}
+
+.submit-button {
+  font-size: 16px; 
+  font-family: 'VodafoneRg';
+  font-weight: 700;
+  padding: 10px;
+  width: 200px;
 }
 
 .roulette-container {
