--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,16 @@
+@font-face {
+    font-family: "VodafoneLt";
+    src: url("./fonts/VodafoneLt-Regular.eot") format("embedded-opentype"), url("./fonts/VodafoneLt-Regular.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "VodafoneRg";
+    src: url("./fonts/VodafoneRg-Regular.eot") format("embedded-opentype"), url("./fonts/VodafoneRg-Regular.ttf") format("truetype");
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: "VodafoneRg", -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
